--- a/CovaVSProj/MainWindow.xaml
+++ b/CovaVSProj/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="600" Width="1025" Loaded="Window_Loaded">
     <Window.Resources>
         <CollectionViewSource x:Key="stockViewSource" d:DesignSource="{d:DesignInstance {x:Type local:Stock}, CreateList=True}"/>
-        <!--<CollectionViewSource x:Key="optionViewSource" d:DesignSource="{d:DesignInstance {x:Type local:Option}, CreateList=True}"/>-->
+        <CollectionViewSource x:Key="optionViewSource" d:DesignSource="{d:DesignInstance {x:Type local:Option}, CreateList=True}"/>
         <Style x:Key="Label" TargetType="{x:Type Label}" BasedOn="{x:Null}">
             <Setter Property="HorizontalAlignment" Value="Left"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
@@ -118,5 +118,56 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
         </Grid>
+        <!--<Grid x:Name="newOrderGrid" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5" DataContext="{Binding Path=newOrder, Mode=TwoWay}" Visibility="Collapsed" Background="LightGreen">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" MinWidth="233"/>
+                <ColumnDefinition Width="Auto" MinWidth="397"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Label Content="New Order Form" FontWeight="Bold"/>
+            <Label Content="Employee ID:"  Grid.Row="1" Style="{StaticResource Label}"/>
+            <TextBox x:Name="add_employeeIDTextBox" Grid.Row="1" Style="{StaticResource StockTextBox}"   
+                  Text="{Binding EmployeeID, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}"/>
+            <Label Content="Order Date:"  Grid.Row="2" Style="{StaticResource Label}"/>
+            <DatePicker x:Name="add_orderDatePicker" Grid.Row="2"  HorizontalAlignment="Right" Width="120"  
+                 SelectedDate="{Binding OrderDate, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true, UpdateSourceTrigger=PropertyChanged}"/>
+            <Label Content="Required Date:" Grid.Row="3" Style="{StaticResource Label}"/>
+            <DatePicker x:Name="add_requiredDatePicker" Grid.Row="3" HorizontalAlignment="Right" Width="120"  
+                  SelectedDate="{Binding RequiredDate, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true, UpdateSourceTrigger=PropertyChanged}"/>
+            <Label Content="Shipped Date:"  Grid.Row="4"  Style="{StaticResource Label}"/>
+            <DatePicker x:Name="add_shippedDatePicker"  Grid.Row="4"  HorizontalAlignment="Right" Width="120"  
+                 SelectedDate="{Binding ShippedDate, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true, UpdateSourceTrigger=PropertyChanged}"/>
+            <Label Content="Ship Via:"  Grid.Row="5" Style="{StaticResource Label}"/>
+            <TextBox x:Name="add_ShipViaTextBox"  Grid.Row="5" Style="{StaticResource StockTextBox}"   
+                  Text="{Binding ShipVia, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}"/>
+            <Label Content="Freight"  Grid.Row="6" Style="{StaticResource Label}"/>
+            <TextBox x:Name="add_freightTextBox" Grid.Row="6" Style="{StaticResource StockTextBox}"   
+                  Text="{Binding Freight, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}"/>
+        </Grid>-->
+        <DataGrid x:Name="ordersDataGrid" SelectionUnit="Cell" SelectionMode="Single" AutoGenerateColumns="False" CanUserAddRows="false" IsEnabled="True" EnableRowVirtualization="True" Width="auto" ItemsSource="{Binding Source={StaticResource optionViewSource}}" Margin="10,10,10,10" Grid.Row="2" RowDetailsVisibilityMode="VisibleWhenSelected">
+            <DataGrid.Columns>
+                <DataGridTemplateColumn>
+                </DataGridTemplateColumn>
+                <DataGridTextColumn x:Name="tickerId" Binding="{Binding id}" Header="Ticker" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="expiryDate" Binding="{Binding EmployeeID}" Header="Expiry" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="strikePrice" Binding="{Binding strike}"       Header="Strike" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="orderIDColumn" Binding="{Binding OrderID}" Header="TimeValue" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="intrinsicValue"         Binding="{Binding ShipAddress}" Header="INT VAL" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="upsidePotential"        Binding="{Binding ShipAddress}" Header="UPS POT" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="downsideProtection"     Binding="{Binding ShipCity}" Header="DWN PRT" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="breakEven"              Binding="{Binding ShipCountry}" Header="BRK EVN" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="initialReturnOfOption"  Binding="{Binding ShipName}" Header="INI ROO" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="annualizedReturnOfOption" Binding="{Binding ShipName}" Header="ANN ROO" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="accruedProfit"          Binding="{Binding ShipName}" Header="ACR PRF" Width="SizeToHeader"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
